--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <html>
-
+<head>
+  <title>Noah Ross Portfolio</title>
+</head>
 <body>
-  <h1>Noah Ross</h1>
-  <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <h1>Noah Ross</h1>
+  <h3>Full Stack Developer</h3>
+  <p>Welcome to my website!</p>
+  <br>
+  <h2>Projects</h2>
+  <br>
+  <h3>Crunchii</h3>
+  <p>React Native Mobile Application with googel api & location integration.</p>
+  <br>
+  <h3>Auto Dispense</h3>
+  <p>Using ultrasonic sensors and esp32 to piggyback system to automatically dispense water.</p>
+  <br>
+  <h3>Weather Station</h3>
+  <p>Custom engeneered weatehre station recording and streaming real time data & keeping historic reccord.</p>
+  <br>
+  <h3>Heater Controller</h3>
+  <p>Developed code to control piggyback system for outdated heating element.</p>
 </body>
+  <footer>
+    <p>Contact Me: Noahrossbusiness@gmail.com, Los Angeles, CA, 90210,</p>
+  </footer>
 
 </html>
